[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/arialbd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/label.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background"]
margin_left = 1075.0
margin_top = 75.0
margin_right = 1860.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
text = "Title of Our Game Here"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="Background"]
margin_left = 1603.58
margin_top = 230.586
margin_right = 1860.58
margin_bottom = 291.586
custom_fonts/font = SubResource( 2 )
text = "Start Game"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Background"]
margin_left = 1603.58
margin_top = 340.586
margin_right = 1860.58
margin_bottom = 401.586
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameSelect" type="NinePatchRect" parent="Background"]
visible = false
margin_left = 1609.0
margin_top = 286.0
margin_right = 1859.0
margin_bottom = 401.0
texture = ExtResource( 4 )
patch_margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/GameSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Otto" type="Button" parent="Background/GameSelect/VBoxContainer"]
margin_top = 13.0
margin_right = 253.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 3 )
text = "Otto Mode"
flat = true
align = 2

[node name="Ludwig" type="Button" parent="Background/GameSelect/VBoxContainer"]
margin_top = 59.0
margin_right = 253.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 3 )
text = "Ludwig Mode"
flat = true
align = 2

[connection signal="pressed" from="Background/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Background/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Background/GameSelect/VBoxContainer/Otto" to="." method="_on_Otto_pressed"]
[connection signal="pressed" from="Background/GameSelect/VBoxContainer/Ludwig" to="." method="_on_Ludwig_pressed"]
